[gd_scene load_steps=6 format=3 uid="uid://tb3fjmamrd0b"]

[ext_resource type="Script" path="res://scripts/shop_item.gd" id="1_43r50"]
[ext_resource type="PackedScene" uid="uid://bbphhhu6wvo68" path="res://scenes/allies/basic_ally/soldat.tscn" id="2_e2ej8"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_chhhw"]
bg_color = Color(0.754647, 0.74703, 0.542539, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_color = Color(0, 0, 0, 1)
corner_radius_top_left = 6
corner_radius_top_right = 6

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_101w1"]
bg_color = Color(0.34902, 0.694118, 0.278431, 1)
border_width_bottom = 1
border_color = Color(0, 0, 0, 1)
corner_radius_top_left = 6
corner_radius_top_right = 6

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_qle7v"]
bg_color = Color(0.624357, 0.439388, 0.221287, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0, 0, 0, 1)
border_blend = true
corner_radius_bottom_right = 6
corner_radius_bottom_left = 6

[node name="ShopItem" type="Control"]
custom_minimum_size = Vector2(94, 160)
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_43r50")
npc_scene = ExtResource("2_e2ej8")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
theme_override_constants/separation = 0

[node name="CoreShopItemPanel" type="PanelContainer" parent="VBoxContainer"]
layout_mode = 2
mouse_filter = 1
theme_override_styles/panel = SubResource("StyleBoxFlat_chhhw")

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/CoreShopItemPanel"]
layout_mode = 2
theme_override_constants/separation = 0

[node name="HeaderShopItemPanel" type="PanelContainer" parent="VBoxContainer/CoreShopItemPanel/VBoxContainer"]
layout_mode = 2
mouse_filter = 1
theme_override_styles/panel = SubResource("StyleBoxFlat_101w1")

[node name="UnitName" type="Label" parent="VBoxContainer/CoreShopItemPanel/VBoxContainer/HeaderShopItemPanel"]
texture_filter = 1
custom_minimum_size = Vector2(0, 20)
layout_mode = 2
mouse_filter = 1
theme_override_constants/outline_size = 4
theme_override_font_sizes/font_size = 22
text = "Soldier"
horizontal_alignment = 1

[node name="UnitInfo" type="Label" parent="VBoxContainer/CoreShopItemPanel/VBoxContainer"]
texture_filter = 1
custom_minimum_size = Vector2(94, 110)
layout_mode = 2
mouse_filter = 1
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_constants/line_spacing = -5
theme_override_font_sizes/font_size = 15
autowrap_mode = 2

[node name="CostPanel" type="PanelContainer" parent="VBoxContainer"]
texture_filter = 1
layout_mode = 2
mouse_filter = 1
theme_override_styles/panel = SubResource("StyleBoxFlat_qle7v")

[node name="UnitCost" type="Label" parent="VBoxContainer/CostPanel"]
layout_mode = 2
theme_override_colors/font_color = Color(0.779513, 0.723424, 0, 1)
text = "2000 gold
"
horizontal_alignment = 1

[connection signal="gui_input" from="." to="." method="_on_gui_input"]
